2020-06-09  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Various: restore filtering in a mailbox that is not currently
	being viewed.

	* libbalsa/mailbox.c (libbalsa_mailbox_message_match),
	(lbm_cache_message): make sure we cache message info when we need it
	for matching;
	* libbalsa/mailbox_local.c (message_match_real): guard against
	NULL threading-info;
	* src/filter-run-dialog.c (available_list_selection_changed),
	(selected_list_selection_changed): no need to disable the
	"Apply" buttons when the mailbox is not being viewed.

2020-06-08  Peter Bloomfield  <pbloomfield@bellsouth.net>

	filter-run-dialog: Disable "Apply selected" and "Apply now" when
	the mailbox is not currently being viewed in the main window. It
	no longer crashes, because of the previous commit, but it does
	not actually carry out any filters, so the user should see the
	option as disabled.

	* src/filter-run-dialog.c (available_list_selection_changed),
	(selected_list_selection_changed):

2020-06-08  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Do not crash when selecting "Apply selected" when the mailbox is
	not being viewed in the main window.

	* libbalsa/mailbox_local.c (message_match_real): check for NULL
	values;
	* src/filter-run-dialog.c (balsa_filter_run_dialog_new): call
	prepare-threading to get ready for filtering.

2020-06-06  Peter Bloomfield  <pbloomfield@bellsouth.net>

	balsa-message: Do not crash

	if the message part is changed while the find-in-message bar is
	active.

	* src/balsa-message.c (bm_find_entry_changed_cb):

2020-06-06  Peter Bloomfield  <pbloomfield@bellsouth.net>

	toolbar-factory: Stop using direct access to GdkEvent structs

	Use gdk_event_get_event_type instead of directly accessing
	event->type.

	* src/toolbar-factory.c (tm_popup_context_menu_cb):

2020-06-06  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Find in message: Make it work again

	* src/balsa-mime-widget-text.c
	(balsa_mime_widget_text_get_text_widget): new getter;